FIXED KNOWAGE-3166: layout problem on temporal dimension https://production.eng.it/jira/browse/KNOWAGE-3166

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -92,7 +92,7 @@
 				}
 			}
     		md-card-content {
-    			height: calc(100% - 112px); 
+    			height: calc(100% - 80px); 
 	    		overflow-y: auto;
 	    		@include coolScrollBars($baseColor,6px);
     		}
